--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <!-- 色を表示するコンテナ -->
 <div id="results"></div>
 
+<!-- 新しいボタンの追加 -->
+<button id="messageButton">メッセージを表示</button>
+
+<!-- メッセージを表示するコンテナ -->
+<div id="messageContainer"></div>
+
 <!-- 外部JavaScriptファイルのリンク -->
 <script src="soulcolor.js"></script>
 
